header, overflow fix for home-v1 and home-v2

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -127,12 +127,35 @@ p {
     padding-left: 0px;
     border-left: 0;
   }
+  .topbar-transparent .social-icons::before{
+    display: none;
+  }
   .social-icons a {
     margin-left: 10px;
 }
-  .topbar-right-icons form input[type="text"] {
-    display: none;
-  }
+.topbar-right-icons ul li:hover form {
+  width: 100.5%;
+  height: 100%;
+  padding: 1px 0px;
+  top: 0px;
+  left: 10px;
+  right: 0px;
+  border: 1px solid #e7e7e7;
+  transform: translateX(-11px);
+  max-width: 100.5%;
+}
+.topbar-right-icons ul li:hover .transparent-form {
+	border: 0;
+  box-shadow: 0px 2px 4px 1px #0000002e;
+}
+.topbar-right-icons ul li form input[type="text"] {
+  width: 0px;
+  padding: 0px;
+}
+.topbar-right-icons ul li:hover form input[type="text"] {
+  width: 92%;
+  padding-left: 10px;
+}
   .header-navigation{
     padding: 15px 10px;
   }
@@ -160,6 +183,9 @@ p {
 }
 .features-title h2 {
   font-size: 42px;
+}
+.single-feature:nth-of-type(3){
+  margin-bottom: 0px;
 }
 .promotion-content{
   padding-left: 20px;
